style: increase custom labor UOM dropdown width to prevent text clipping

--- a/css/styles.css
+++ b/css/styles.css
@@ -1433,4 +1433,9 @@ body {
   }
 }
 
+.item-uom-input {
+  min-width: 65px;
+  padding: 0.4rem 0.25rem !important;
+}
+
 
